fix grid on ie

--- a/styles/sass/_skills.scss
+++ b/styles/sass/_skills.scss
@@ -4,7 +4,9 @@ i {
 }
 
 .skills ul {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 60px;
     width: 80%;
